[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc="*"

[dependencies]
winit = "0.30.3"
xilem = { git = "https://github.com/linebender/xilem"}
masonry = { git = "https://github.com/linebender/xilem"}
accesskit = "0.15.0"
smallvec = "1.13.2"
tracing = "0.1.40"
itertools = "0.13.0"
tree-sitter = "0.22.6"
tree-sitter-rust = "0.21.2"
